--- a/film-service/src/main/resources/application.properties
+++ b/film-service/src/main/resources/application.properties
@@ -29,7 +29,8 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.use_sql_comments=true
 #---
-spring.config.activate.on-profile=test
+spring.config.activate.on-profile=integration-test
+spring.cloud.discovery.enabled=false
 spring.datasource.url=${TEST_CONTAINER.URL}
 spring.datasource.username=${TEST_CONTAINER.USERNAME}
 spring.datasource.password=${TEST_CONTAINER.PASSWORD}
