--- a/cinema-main-service/src/main/resources/application.properties
+++ b/cinema-main-service/src/main/resources/application.properties
@@ -8,11 +8,12 @@ spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:2236}
 #
 films.api.url=${FILM_API_URL:http://localhost:8765/film-service}
 #
+#spring.kafka.admin.auto-create=true
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
 spring.kafka.producer.properties.spring.json.trusted.packages=*
 spring.kafka.producer.properties.spring.json.type.mapping=requestAddFilms:ru.cinema.model.dto.RequestAddFilms
-spring.kafka.bootstrap-servers=localhost:9092
+spring.kafka.bootstrap-servers=${KAFKA_BOOTSTRAP_SERVERS:localhost:9092}
 #
 spring.liquibase.driver-class-name=org.postgresql.Driver
 spring.liquibase.enabled=true
