--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,9 +8,34 @@ services:
     container_name: eureka-server
     ports:
       - "8761:8761"
+    networks:
+      - app-network
     environment:
       EUREKA_SERVER_PORT: 8761
-      EUREKA_CLIENT_SERVICE_URL: http://localhost:8761/eureka
+      EUREKA_CLIENT_SERVICE_URL: http://eureka-server:8761/eureka
+
+  zookeeper:
+    image: wurstmeister/zookeeper
+    ports:
+      - "2181:2181"
+    networks:
+      - app-network
+
+  kafka:
+    image: wurstmeister/kafka
+    ports:
+      - "9092:9092"
+    depends_on:
+      - zookeeper
+    networks:
+      - app-network
+    environment:
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: LISTENER_DOCKER_INTERNAL:PLAINTEXT,LISTENER_DOCKER_EXTERNAL:PLAINTEXT
+      KAFKA_ADVERTISED_LISTENERS: LISTENER_DOCKER_INTERNAL://kafka:19092,LISTENER_DOCKER_EXTERNAL://localhost:9092
+      KAFKA_LISTENERS: LISTENER_DOCKER_INTERNAL://kafka:19092,LISTENER_DOCKER_EXTERNAL://localhost:9092
+      KAFKA_INTER_BROKER_LISTENER_NAME: LISTENER_DOCKER_EXTERNAL
+      KAFKA_CREATE_TOPICS: films:1:1
+      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
 
   film-service:
     build:
@@ -21,8 +46,12 @@ services:
     ports:
       - "8081:8081"
     depends_on:
+      - kafka
       - eureka-server
+      - cinema-main-service
       - film-db
+    networks:
+      - app-network
     environment:
       SPRING_DATASOURCE_URL: jdbc:postgresql://film-db:5432/films
       SPRING_DATASOURCE_USERNAME: postgres
@@ -32,6 +61,7 @@ services:
       KINOPOISK_API_HEADER: X-API-KEY
       KINOPOISK_API_TOKEN: ZJ0XHNA-RDG4Z6Y-G6MPD34-CHRBV6E
       KINOPOISK_API_URL: https://api.kinopoisk.dev/v1.4
+      KAFKA_BOOTSTRAP_SERVERS: kafka:19092
 
   film-db:
     image: postgres:14.7-alpine
@@ -42,6 +72,8 @@ services:
       POSTGRES_DB: films
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: 2236
+    networks:
+      - app-network
 
   cinema-main-service:
     build:
@@ -52,14 +84,17 @@ services:
     ports:
       - "8080:8080"
     depends_on:
+      - kafka
       - cinema-db
-      - film-service
+    networks:
+      - app-network
     environment:
       SPRING_DATASOURCE_URL: jdbc:postgresql://cinema-db:5432/cinema
       SPRING_DATASOURCE_USERNAME: postgres
       SPRING_DATASOURCE_PASSWORD: 2236
       MAIN_SERVER_PORT: 8080
       FILM_API_URL: http://api-gateway:8765/film-service
+      KAFKA_BOOTSTRAP_SERVERS: kafka:19092
 
   cinema-db:
     image: postgres:14.7-alpine
@@ -70,6 +105,8 @@ services:
       POSTGRES_PASSWORD: 2236
     ports:
       - "6542:5432"
+    networks:
+      - app-network
 
   api-gateway:
     build:
@@ -83,6 +120,12 @@ services:
       - eureka-server
       - film-service
       - cinema-main-service
+    networks:
+      - app-network
     environment:
       API_GATEWAY_PORT: 8765
       EUREKA_CLIENT_SERVICE_URL: http://eureka-server:8761/eureka
+
+networks:
+  app-network:
+    driver: bridge
