--- a/cinema-main-service/src/main/resources/application.properties
+++ b/cinema-main-service/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:2236}
 #
 films.api.url=${FILM_API_URL:http://localhost:8765/film-service}
 #
-#spring.kafka.admin.auto-create=true
+spring.kafka.admin.auto-create=true
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
 spring.kafka.producer.properties.spring.json.trusted.packages=*
